# latex-ide

./: Main.hs  README.markdown  latex-ide.cabal  latexmkrc  make-latex.cabal  test.tex
bibliography/: computer_science.bib  myplainnat.bst
