name:             make-latex
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.6

executable make-latex
  ghc-options:
      -Wall
  build-depends:
      base
    , bytestring
    , hinotify
    , process >= 1.2.0.0
    , directory
    , filepath
  hs-source-dirs:
      .
  main-is:
      Main.hs
