name:             make-latex
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.6

executable latex-ide
  ghc-options:
      -Wall
  build-depends:
      base
    , bytestring
    , hinotify
    , process >= 1.2.0.0
    , directory >= 1.2.2
    , filepath
    , unix
  hs-source-dirs:
      .
  main-is:
      Main.hs
